deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: websites-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: api.csgames.recursyve.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: csgames-gateway-staging-backend
          servicePort: 8000
